[package]
name = "zeromq_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.10.0"
serde = {version = "1.0.123", features = ["derive"]}
serde_json = "1.0.61"
anyhow = "1.0.38"
rand = "0.8.5"
simple_logger = "1.11.0"
log = "0.4.14"